--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,20 @@
         android:id="@+id/navigation_home"
         android:name="com.example.wmc.ui.Fragment.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/home_to_list"
+            app:destination="@id/navigation_list" />
+        <action
+            android:id="@+id/home_to_review"
+            app:destination="@id/navigation_review" />
+        <action
+            android:id="@+id/home_to_cafe_detail"
+            app:destination="@id/navigation_cafe_detail" />
+        <action
+            android:id="@+id/home_to_mypage"
+            app:destination="@id/navigation_mypage" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_list"
@@ -24,8 +37,14 @@
         tools:layout="@layout/fragment_review" />
 
     <fragment
-        android:id="@+id/navigation_myPage"
+        android:id="@+id/navigation_mypage"
         android:name="com.example.wmc.ui.Fragment.MyPageFragment"
         android:label="@string/title_myPage"
         tools:layout="@layout/fragment_mypage" />
+
+    <fragment
+        android:id="@+id/navigation_cafe_detail"
+        android:name="com.example.wmc.ui.Fragment.CafeDetailFragment"
+        android:label="@string/title_cafe_detail"
+        tools:layout="@layout/fragment_cafe_detail" />
 </navigation>
