--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -61,6 +61,9 @@
         <action
             android:id="@+id/myPage_to_cafe_detail"
             app:destination="@id/navigation_cafe_detail" />
+        <action
+            android:id="@+id/myPage_to_review"
+            app:destination="@id/navigation_review" />
     </fragment>
 
 
