--- a/app/src/main/res/layout/fragment_app_loading.xml
+++ b/app/src/main/res/layout/fragment_app_loading.xml
@@ -6,7 +6,7 @@
     android:background="@color/login_background_color">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logo"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:src="@drawable/logo_v2"
