--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,16 +1,251 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_background_color">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/backspace_button"
+                    android:layout_width="34dp"
+                    android:layout_height="34dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/back_button"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/logo"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginStart="105dp"
+                    android:src="@drawable/logo_v2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/CautionMark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="18"
+                    android:gravity="right"
+                    android:paddingRight="5dp"
+                    android:text="*"
+                    android:textColor="#FF0000" />
+
+                <TextView
+                    android:id="@+id/caution_required_fields"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:paddingRight="20dp"
+                    android:text="표시는 필수 기입란입니다." />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/idCautionMark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp"
+                    android:text="*"
+                    android:textColor="#FF0000" />
+
+                <EditText
+                    android:id="@+id/signUp_id_input"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:hint="ID"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/pwCautionMark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp"
+                    android:text="*"
+                    android:textColor="#FF0000" />
+
+                <EditText
+                    android:id="@+id/signUp_pw_input"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Password"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/verifyPwCautionMark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp"
+                    android:text="*"
+                    android:textColor="#FF0000" />
+
+                <EditText
+                    android:id="@+id/signUp_verifyPw_input"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Verify Password"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/nickNameCautionMark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp"
+                    android:text="*"
+                    android:textColor="#FF0000" />
+
+                <EditText
+                    android:id="@+id/signUp_nickName_input"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:hint="닉네임"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/nubmerCautionMark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp"
+                    android:text="*"
+                    android:textColor="#FF0000" />
+
+                <EditText
+                    android:id="@+id/signUp_nubmer_input"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:hint="전화번호"
+                    android:inputType="number" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/addressCautionMark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp"
+                    android:text="*"
+                    android:textColor="#FF0000" />
+
+                <EditText
+                    android:id="@+id/signUp_address_input"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:hint="주소"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/preferenceCautionMark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp"
+                    android:text="*"
+                    android:textColor="#FF0000" />
+
+                <TextView
+                    android:id="@+id/signUp_preference_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingTop="10dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    android:text="우선순위"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
