--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -70,6 +70,7 @@
                     android:paddingRight="20dp"
                     android:text="표시는 필수 기입란입니다." />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -94,6 +95,7 @@
                     android:hint="ID"
                     android:inputType="textPersonName" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -191,6 +193,7 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:hint="전화번호"
+                    android:maxLength="11"
                     android:inputType="number" />
             </LinearLayout>
 
@@ -245,7 +248,99 @@
                     android:textColor="@color/black"
                     android:text="우선순위"
                     android:inputType="textPersonName" />
+
+                <RadioGroup
+                    android:id="@+id/preferenceGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/radio_study"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="스터디"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/radio_taste"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="커피맛"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </RadioGroup>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/profileCautionMark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp"
+                    android:text="*"
+                    android:textColor="@color/login_background_color" />
+
+                <EditText
+                    android:id="@+id/signUp_profileImage_input"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:hint="프로필 사진"
+                    android:enabled="false"
+                    android:inputType="textPersonName" />
+
+                <Button
+                    android:id="@+id/add_profileImage_button"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/add_profileimage_button" />
+            </LinearLayout>
+            <Button
+                android:id="@+id/signUp_button"
+                android:layout_gravity="center"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edge_square_brown"
+                android:text="회원가입"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/searchID_PW_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:clickable="true"
+                android:text="아이디, 비밀번호 찾기 >"
+                android:textColor="#000000"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/line1"
+                android:layout_width="150dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="20dp"
+                android:background="#000000"
+                android:layout_gravity="center" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
