--- a/app/src/main/res/drawable/review_spinner.xml
+++ b/app/src/main/res/drawable/review_spinner.xml
@@ -4,9 +4,9 @@
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="#F6921E" />
+                    <solid android:color="@color/orange" />
                     <corners android:radius="12dp" />
-                    <padding android:right="12dp" />
+                    <padding android:right="10dp" />
                 </shape>
             </item>
             <item
